--- a/index.html
+++ b/index.html
@@ -9,35 +9,44 @@
   <link rel="stylesheet" href="css/index.css">
 
 </head>
-  <body>
-     <div class="container">
-  <header>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Features</a>
-      <a href="#">About Us</a>
-    </nav>
-    <img class="logo" src="" alt="">
-  </header>
+<body>
+  <div class="container">
+    <header>
+      <nav>
+        <h1>Conjugator</h1>
+        <a href="#home">Home</a>
+        <a href="#features">Features</a>
+        <a href="#about-us">About Us</a>
+        <a href="#">Login</a>
+      </nav>
+    <!-- <img class="logo" src="" alt=""> -->
+    </header>
 
-  <section class="features">
+    <section id="home">
+      <div class="home-text">
+        <h2>Conjugator</h2>
+        <p>Can't find the perfect way to quiz your knowledge? We have the solution!</p>
+      </div>
+    </section>
+
+    <section id="features">
       <div class="feature-text">
-        <h4>Features</h4>
+        <h2>Features</h2>
         <p>Features go here.</p>
       </div>
-  </section>
+    </section>
 
-  <section class="about-us">
-    <div class="about-us-text">
-        <h4>About Us</h4>
+    <section id="about-us">
+      <div class="about-us-text">
+        <h2>About Us</h2>
         <p>Team member info.</p>
       </div>
-  </section>
-  
-  <footer>
-    <p>Copyright Conjugator 2019</p>
-  </footer>
+    </section>
 
-</div><!-- container -->
-  </body>
+    <footer>
+      <p>Copyright Conjugator 2019</p>
+    </footer>
+
+  </div><!-- container -->
+</body>
 </html>
