--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Conjugator</h1>
         <a href="#home">Home</a>
         <a href="#features">Features</a>
-        <a href="#about-us">About Us</a>
+        <a href="#about-us">About</a>
         <a href="#">Login</a>
       </nav>
     <!-- <img class="logo" src="" alt=""> -->
