--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conjugator</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
 </head>
@@ -32,14 +32,31 @@
     <section id="features">
       <div class="feature-text">
         <h2>Features</h2>
-        <p>Features go here.</p>
+        <img class="app-image" src="photos/app.png" alt="Image of conjugator website">
+        <ul>
+          <li>Practice conjugating verbs in 12 tenses.</li>
+          <li>Keep track of your current and best streaks.</li>
+          <li>Learn sentence structure and grammar.</li>
+          <li>Multiple difficulty settings for students of all levels.</li>
+        </ul>
       </div>
     </section>
 
     <section id="about-us">
-      <div class="about-us-text">
-        <h2>About Us</h2>
-        <p>Team member info.</p>
+      <h2>About Us</h2>
+        <div class="about-us-text">
+          <div class="daniel">
+            <img src="photos/dan.png">
+            <h3>Daniel Martin<br>UI Developer</h3>
+          </div>
+          <div class="farjad">
+            <img src="photos/farjad.jpeg">
+            <h3>Farjad Fazli<br>UI Developer</h3>
+          </div>
+          <div class="matheus">
+            <img src="photos/matheus.jpeg">
+            <h3>Matheus Silva<br>React Developer</h3>
+          </div>
       </div>
     </section>
 
