--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </section>
 
     <section id="features">
-      <div class="feature-text">
         <h2>Features</h2>
+           <div class="feature-text">
         <img class="app-image" src="photos/app.png" alt="Image of conjugator website">
         <ul>
           <li>Practice conjugating verbs in 12 tenses.</li>
@@ -46,7 +46,7 @@
       <h2>About Us</h2>
         <div class="about-us-text">
           <div class="daniel">
-            <img src="photos/dan.png">
+            <img src="photos/dan.jpg">
             <h3>Daniel Martin<br>UI Developer</h3>
           </div>
           <div class="farjad">
