added logo, fixed navbar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
   <div class="container">
     <header>
+     
       <nav>
-        <h1>Conjugator</h1>
+        <img src='./photos/logo_transparent.png'>
         <a href="#home">Home</a>
         <a href="#features">Features</a>
         <a href="#about-us">About</a>
@@ -24,8 +25,9 @@
 
     <section id="home">
       <div class="home-text">
-        <h2>Conjugator</h2>
+        <h1>Conjugator</h1>
         <p>Can't find the perfect way to quiz your knowledge? We have the solution!</p>
+        <img src="./photos/books.jpg" alt="">
       </div>
     </section>
 
