added home page, graph and chart to main page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
   <div class="container">
     <header>
-     
       <nav>
         <img src='./photos/logo_transparent.png'>
         <a href="#home">Home</a>
@@ -20,28 +19,35 @@
         <a href="#about-us">About</a>
         <a href="#">Login</a>
       </nav>
-    <!-- <img class="logo" src="" alt=""> -->
     </header>
 
-    <section id="home">
-      <div class="home-text">
-        <h1>Conjugator</h1>
-        <p>Can't find the perfect way to quiz your knowledge? We have the solution!</p>
-        <img src="./photos/books.jpg" alt="">
-      </div>
-    </section>
+    <!-- <section id="home">
+        <div class="home-text">
+          <h1>Conjugator</h1>
+          <p>Can't find the perfect way to quiz your knowledge? We have the solution!</p>
+          <img src="./photos/books.jpg" alt="">
+        </div>
+    </section> -->
 
     <section id="features">
         <h2>Features</h2>
-           <div class="feature-text">
-        <img class="app-image" src="photos/app.png" alt="Image of conjugator website">
-        <ul>
-          <li>Practice conjugating verbs in 12 tenses.</li>
-          <li>Keep track of your current and best streaks.</li>
-          <li>Learn sentence structure and grammar.</li>
-          <li>Multiple difficulty settings for students of all levels.</li>
-        </ul>
-      </div>
+        <div class="feature-text">
+          <img class="app-image" src="photos/app.png" alt="Image of conjugator website">
+          <ul>
+            <li>Practice conjugating verbs in 12 tenses.</li>
+            <li>Keep track of your current and best streaks.</li>
+            <li>Learn sentence structure and grammar.</li>
+            <li>Multiple difficulty settings for students of all levels.</li>
+          </ul>
+          <img class="app-image" src="photos/graph.PNG" alt="graph with data">
+          <ul>
+            <li>Track your learning progress for the week, month, or year</li>
+          </ul>
+          <img class="app-image" src="photos/percentage.PNG" alt="chart with data">
+          <ul>
+            <li>See which tenses you know best</li>
+          </ul>
+        </div>
     </section>
 
     <section id="about-us">
