--- a/homePage.html
+++ b/homePage.html
@@ -11,11 +11,11 @@
         <header>
             <div class="image-container">
             <img src="photos/logo_transparent.png" alt="Conjugator logo">
-                <p>The perfect conjugation quiz</p>
+                <p>The perfect conjugation quiz!</p>
             </div>
             <div class="text-container">
             <h1>Welcome to Conjugator!</h1>
-            <p>Learning conjugations made simple</p>
+            <p>Learning conjugations made simple!</p>
             <a href="index.html">Learn More</a>
             </div>
         </header>
