--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <img src='./photos/logo_transparent.png'>
-        <a href="#home">Home</a>
+        <a href="/homePage.html">Home</a>
         <a href="#features">Features</a>
         <a href="#about-us">About</a>
         <a href="#">Login</a>
@@ -41,11 +41,17 @@
           </ul>
           <img class="app-image" src="photos/graph.PNG" alt="graph with data">
           <ul>
-            <li>Track your learning progress for the week, month, or year</li>
+            <li>Track your learning progress for the week, month, or year.</li>
+            <li>
+              Interactive dashboard allows your to visualize your progress.
+            </li>
           </ul>
           <img class="app-image" src="photos/percentage.PNG" alt="chart with data">
           <ul>
-            <li>See which tenses you know best</li>
+            <li>See which tenses you know best.</li>
+            <li>
+              Filter answers by tense to focus your studying.
+            </li>
           </ul>
         </div>
     </section>
