--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="/homePage.html">Home</a>
         <a href="#features">Features</a>
         <a href="#about-us">About</a>
-        <a href="#">Login</a>
+        <a href="https://enigmatic-ocean-49872.herokuapp.com/login">Login</a>
       </nav>
     </header>
 
